// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`templates createAPIResourceTemplate should create API resource template correctly 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for MyService",
    "entryPoints": [
      "/odata/v4/my",
    ],
    "extensible": {
      "supported": "no",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-api:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.edmx",
      },
    ],
    "shortDescription": "Short description of MyService",
    "title": "MyService",
    "version": "1.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates createEntityTypeTemplate should return entity type with default version, title and level:sub-entity 1`] = `
{
  "description": "Description for SomeAribaDummyEntity",
  "extensible": {
    "supported": "no",
  },
  "lastUpdate": "2022-12-19T15:47:04+00:00",
  "level": "sub-entity",
  "localId": "SomeAribaDummyEntity",
  "ordId": "sap.sm:entityType:SomeAribaDummyEntity:v1",
  "partOfPackage": "sap.test.cdsrc.sample:package:test-entityType:v1",
  "releaseStatus": "active",
  "shortDescription": "Short description of SomeAribaDummyEntity",
  "title": "SomeAribaDummyEntity",
  "version": "1.0.0",
  "visibility": "public",
}
`;

exports[`templates createEntityTypeTemplate should return entity type with incorrect version, title and level:root-entity 1`] = `
{
  "description": "Description for SomeAribaDummyEntity",
  "extensible": {
    "supported": "no",
  },
  "lastUpdate": "2022-12-19T15:47:04+00:00",
  "level": "root-entity",
  "localId": "SomeAribaDummyEntity",
  "ordId": "sap.sm:entityType:SomeAribaDummyEntity:v3b",
  "partOfPackage": "sap.test.cdsrc.sample:package:test-entityType:v1",
  "releaseStatus": "active",
  "shortDescription": "Short description of SomeAribaDummyEntity",
  "title": "Title of SomeAribaDummyEntity",
  "version": "3b.0.0",
  "visibility": "public",
}
`;

exports[`templates createEventResourceTemplate should create event resource template correctly 1`] = `
[
  {
    "description": "CAP Event resource describing events / messages.",
    "extensible": {
      "supported": "no",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:eventResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-event:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "asyncapi-v2",
        "url": "/ord/v1/customer.testNamespace:eventResource:MyService:v1/MyService.asyncapi2.json",
      },
    ],
    "shortDescription": "MyService event resource",
    "title": "ODM testAppName Events",
    "version": "1.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates createEventResourceTemplate should create event resource template correctly with packageIds including namespace 1`] = `
[
  {
    "description": "CAP Event resource describing events / messages.",
    "extensible": {
      "supported": "no",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:eventResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "customer.testNamespace:package:test:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "asyncapi-v2",
        "url": "/ord/v1/customer.testNamespace:eventResource:MyService:v1/MyService.asyncapi2.json",
      },
    ],
    "shortDescription": "MyService event resource",
    "title": "ODM testAppName Events",
    "version": "1.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates createMCPAPIResourceTemplate should create MCP API resource template correctly 1`] = `
{
  "apiProtocol": "mcp",
  "description": "This is the MCP server to interact with the testAppName",
  "entryPoints": [],
  "extensible": {
    "supported": "no",
  },
  "lastUpdate": "2022-12-19T15:47:04+00:00",
  "ordId": "customer.testNamespace:apiResource:mcp-server:v1",
  "partOfPackage": "customer.testNamespace:package:api:v1",
  "releaseStatus": "active",
  "resourceDefinitions": [
    {
      "accessStrategies": [
        {
          "type": "open",
        },
      ],
      "mediaType": "application/json",
      "type": "custom",
      "url": "/ord/v1/customer.testNamespace:apiResource:mcp-server:v1/mcp-server-definition.mcp.json",
    },
  ],
  "shortDescription": "This is the MCP server to interact with the testAppName",
  "title": "MCP Server for testAppName",
  "version": "1.0.0",
  "visibility": "public",
}
`;

exports[`templates getEntityTypeMappings should clean up duplicates 1`] = `
[
  {
    "entityTypeTargets": [
      {
        "ordId": "sap.odm:entityType:Something:v1",
      },
      {
        "ordId": "sap.sm:entityType:Else:v2",
      },
    ],
  },
]
`;

exports[`templates getExposedEntityTypes should clean up duplicates 1`] = `
[
  {
    "ordId": "sap.odm:entityType:Something:v1",
  },
  {
    "ordId": "sap.sm:entityType:Else:v2",
  },
]
`;

exports[`templates ordExtension should add apiResources with ORD Extension "visibility=public" 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for MyService",
    "entityTypeMappings": [
      {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:testOdmEntity:v1",
          },
        ],
      },
    ],
    "entryPoints": [
      "/odata/v4/my",
    ],
    "exposedEntityTypes": [
      {
        "ordId": "sap.odm:entityType:testOdmEntity:v1",
      },
    ],
    "extensible": {
      "supported": "yes",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-other:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.edmx",
      },
    ],
    "shortDescription": "short description for test MyService apiResource",
    "title": "This is test MyService apiResource title",
    "version": "2.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates ordExtension should add events with ORD Extension "visibility=public" 1`] = `
[
  {
    "description": "CAP Event resource describing events / messages.",
    "extensible": {
      "supported": "yes",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:eventResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-event:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "asyncapi-v2",
        "url": "/ord/v1/customer.testNamespace:eventResource:MyService:v1/MyService.asyncapi2.json",
      },
    ],
    "shortDescription": "short description for test MyService event",
    "title": "This is test MyService event title",
    "version": "2.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates ordExtension should find association on nested entities for related service 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for MyService",
    "entityTypeMappings": [
      {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:DirectAssociationOdmEntity:v1",
          },
          {
            "ordId": "sap.odm:entityType:NestedAssociationOdmEntity:v1",
          },
        ],
      },
    ],
    "entryPoints": [
      "/odata/v4/my",
    ],
    "exposedEntityTypes": [
      {
        "ordId": "sap.odm:entityType:DirectAssociationOdmEntity:v1",
      },
      {
        "ordId": "sap.odm:entityType:NestedAssociationOdmEntity:v1",
      },
    ],
    "extensible": {
      "supported": "yes",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-other:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.edmx",
      },
    ],
    "shortDescription": "short description for test MyService apiResource",
    "title": "This is test MyService apiResource title",
    "version": "2.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates ordExtension should find composition and association entities for related service 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for MyService",
    "entityTypeMappings": [
      {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:CompositionOdmEntity:v1",
          },
          {
            "ordId": "sap.odm:entityType:AssociationOdmEntity:v1",
          },
        ],
      },
    ],
    "entryPoints": [
      "/odata/v4/my",
    ],
    "exposedEntityTypes": [
      {
        "ordId": "sap.odm:entityType:CompositionOdmEntity:v1",
      },
      {
        "ordId": "sap.odm:entityType:AssociationOdmEntity:v1",
      },
    ],
    "extensible": {
      "supported": "yes",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-other:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.edmx",
      },
    ],
    "shortDescription": "short description for test MyService apiResource",
    "title": "This is test MyService apiResource title",
    "version": "2.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates ordExtension should find composition on nested entities for related service 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for MyService",
    "entityTypeMappings": [
      {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:DirectCompositionOdmEntity:v1",
          },
          {
            "ordId": "sap.odm:entityType:NestedCompositionOdmEntity:v1",
          },
        ],
      },
    ],
    "entryPoints": [
      "/odata/v4/my",
    ],
    "exposedEntityTypes": [
      {
        "ordId": "sap.odm:entityType:DirectCompositionOdmEntity:v1",
      },
      {
        "ordId": "sap.odm:entityType:NestedCompositionOdmEntity:v1",
      },
    ],
    "extensible": {
      "supported": "yes",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-other:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.edmx",
      },
    ],
    "shortDescription": "short description for test MyService apiResource",
    "title": "This is test MyService apiResource title",
    "version": "2.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates ordExtension should find ordId on circular relations 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for MyService",
    "entityTypeMappings": [
      {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:DirectCompositionOdmEntity:v1",
          },
          {
            "ordId": "sap.odm:entityType:NestedCompositionOdmEntity:v1",
          },
        ],
      },
    ],
    "entryPoints": [
      "/odata/v4/my",
    ],
    "exposedEntityTypes": [
      {
        "ordId": "sap.odm:entityType:DirectCompositionOdmEntity:v1",
      },
      {
        "ordId": "sap.odm:entityType:NestedCompositionOdmEntity:v1",
      },
    ],
    "extensible": {
      "supported": "yes",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-other:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.edmx",
      },
    ],
    "shortDescription": "short description for test MyService apiResource",
    "title": "This is test MyService apiResource title",
    "version": "2.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates ordExtension should include internal API resources but ensure they appear in a separate package 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for MyService",
    "entityTypeMappings": [
      {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:testOdmEntity:v1",
          },
        ],
      },
    ],
    "entryPoints": [
      "/odata/v4/my",
    ],
    "exposedEntityTypes": [
      {
        "ordId": "sap.odm:entityType:testOdmEntity:v1",
      },
    ],
    "extensible": {
      "supported": "yes",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-other:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/ord/v1/customer.testNamespace:apiResource:MyService:v1/MyService.edmx",
      },
    ],
    "shortDescription": "short description for test MyService apiResource",
    "title": "This is test MyService apiResource title",
    "version": "2.0.0",
    "visibility": "internal",
  },
]
`;

exports[`templates ordExtension should include internal events but ensure they appear in a separate package 1`] = `
[
  {
    "description": "CAP Event resource describing events / messages.",
    "extensible": {
      "supported": "yes",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:eventResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-event-internal:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "asyncapi-v2",
        "url": "/ord/v1/customer.testNamespace:eventResource:MyService:v1/MyService.asyncapi2.json",
      },
    ],
    "shortDescription": "short description for test MyService event",
    "title": "This is test MyService event title",
    "version": "2.0.0",
    "visibility": "internal",
  },
]
`;

exports[`templates ordExtension should not add apiResources with ORD Extension "visibility=private" 1`] = `[]`;

exports[`templates ordExtension should not add events with ORD Extension "visibility=private" 1`] = `[]`;
